main/default/objects/Facility__c/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Training Completed</description>
    <inlineHelpText>Training Completed</inlineHelpText>
    <label>Training Completed</label>
    <type>Checkbox</type>
</CustomField>