main/default/objects/Facility__c/fields/Training_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Not_Completed__c</fullName>
    <description>Training Not Completed</description>
    <formula>AND(OR(ISPICKVAL(Facility_Status__c, "Active")),
 ISPICKVAL( FS_Training_request__c , "Yes"),
 ISBLANK(FS_Training_date__c )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Facility Status = Active and
FS Training Request = Yes and
FS Training Date = Blank</inlineHelpText>
    <label>Training Not Completed</label>
    <type>Checkbox</type>
</CustomField>