main/default/objects/Facility__c/fields/Training_not_requested__c.field-meta.xml
<CustomField>
    <fullName>Training_not_requested__c</fullName>
    <description>Training not requested</description>
    <formula>AND(OR(ISPICKVAL(Facility_Status__c, "Active"),ISPICKVAL(Facility_Status__c, "Manual Accept Shipments")),
OR(
 ISPICKVAL( FS_Training_request__c , "No"),
 ISBLANK(TEXT(FS_Training_request__c)))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Facility Status = Active or Manual Accept Shipments and
FS Training Request = No or Blank</inlineHelpText>
    <label>Training not requested</label>
    <type>Checkbox</type>
</CustomField>