main/default/objects/Facility__c/fields/Unauthorized_Sub_Contracting__c.field-meta.xml
<CustomField>
    <fullName>Unauthorized_Sub_Contracting__c</fullName>
    <description>Unauthorized Subcontracting</description>
    <inlineHelpText>Unauthorized Subcontracting</inlineHelpText>
    <label>Unauthorized Subcontracting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>