main/default/objects/Facility__c/fields/WCA_CAPA_Completed__c.field-meta.xml
<CustomField>
    <fullName>WCA_CAPA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA CAPA Completed</description>
    <inlineHelpText>WCA CAPA Completed</inlineHelpText>
    <label>WCA CAPA Completed</label>
    <type>Checkbox</type>
</CustomField>