main/default/objects/Facility__c/fields/WCA_CAPA_Greenlist_Criteria__c.field-meta.xml
<CustomField>
    <fullName>WCA_CAPA_Greenlist_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA CAPA Greenlist Criteria</description>
    <inlineHelpText>WCA CAPA Greenlist Criteria</inlineHelpText>
    <label>WCA CAPA Greenlist Criteria</label>
    <type>Checkbox</type>
</CustomField>