main/default/objects/Facility__c/fields/WCA_CAPA_Not_Requested__c.field-meta.xml
<CustomField>
    <fullName>WCA_CAPA_Not_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA CAPA Not Requested</description>
    <inlineHelpText>WCA CAPA Not Requested</inlineHelpText>
    <label>WCA CAPA Not Requested</label>
    <type>Checkbox</type>
</CustomField>