main/default/objects/Facility__c/fields/WCA_Compliant__c.field-meta.xml
<CustomField>
    <fullName>WCA_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA Compliant</description>
    <inlineHelpText>Audit Group = ANNUAL WCA and
Facility Status = ACTIVE and
Audit Date  >=TODAY()-365</inlineHelpText>
    <label>WCA Compliant</label>
    <type>Checkbox</type>
</CustomField>