main/default/objects/Facility__c/fields/WCA_Due_for_new_listing__c.field-meta.xml
<CustomField>
    <fullName>WCA_Due_for_new_listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA Due for new listing</description>
    <inlineHelpText>Audit Group = ANNUAL WCA and
Factory Status  = ACTIVE and
Audit Date = BLANK</inlineHelpText>
    <label>WCA Due for new listing</label>
    <type>Checkbox</type>
</CustomField>