main/default/objects/Facility__c/fields/WCA_Greenlist_Criteria__c.field-meta.xml
<CustomField>
    <fullName>WCA_Greenlist_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA Greenlist Criteria</description>
    <inlineHelpText>WCA Greenlist Criteria</inlineHelpText>
    <label>WCA Greenlist Criteria</label>
    <type>Checkbox</type>
</CustomField>