main/default/objects/Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Facility_Number__c</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Facility_Status__c</columns>
    <columns>Green_List_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>